# quadwild-bimdf

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_release.md  build_docker.sh
.github/workflows/: build.yaml
blender_plugin/: README.md  __init__.py
components/field_computation/: CMakeLists.txt  mesh_manager.h
components/field_tracing/: CMakeLists.txt  main.cpp
components/quad_from_patches/: CMakeLists.txt  basic_setup.txt  main.cpp  quad_from_patches.cpp  quad_from_patches.h  quad_from_patches.pro
components/viz_mesh_results/: CMakeLists.txt  configuration.pri  main.cpp  viz_mesh_results.pro
config/satsuma/: approx-mst.json  approx-round2even.json  approx-symmdc.json  debug.json  default.json  edgethru.json
libs/: libs.pri
libs/lpsolve/: CMakeLists.txt
libs/quadretopology/: CMakeLists.txt  quadretopology.pri
libs/quadretopology/patterns/patterns/kt84/: util.h
libs/quadretopology/quadretopology/: qr_eval_quantization.cpp  qr_eval_quantization.h  qr_eval_quantization_json.h  qr_flow.cpp  qr_flow.h  qr_flow_config.h  qr_singularity_pairs.cpp  qr_singularity_pairs.h  quadretopology.cpp  quadretopology.h  quadretopology_impl.h
libs/quadretopology/quadretopology/includes/: qr_charts.cpp  qr_charts.h  qr_ilp.cpp  qr_ilp.h  qr_ilp_nogurobi.cpp  qr_parameters.h
libs/quadretopology/quadretopology/includes/config/: gurobi.hh.in
quadwild/: CMakeLists.txt  cli_trace.cpp  functions.cpp  functions.h  quadwild.cpp  quadwild.pro  trace.cpp  trace.h
